[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Textures/Turret.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Turret.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Opening_ceil"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Opening_floor"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 100, 42.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 1 )

[node name="Turret" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 6
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Opening_ceil = SubResource( 3 )
anims/Opening_floor = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
collision_mask = 2

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2( 1, -32.5 )
shape = SubResource( 6 )
one_way_collision_margin = 0.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -5 )
shape = SubResource( 7 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
